Modified a part of the css file

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -275,6 +275,7 @@ Variables
   }
   .editbtn {
     color: var(--clr-green-light);
+    margin-left: auto;
   }
   .editbtn:hover {
     color: var(--clr-green-dark);
